--- a/DnDSpringProject/pom.xml
+++ b/DnDSpringProject/pom.xml
@@ -48,6 +48,18 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+    
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>2.1.10.RELEASE</version>
+      </dependency>
+    
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.4.199</version>
+      </dependency>
     </dependencies>
 
     <build>
